Fix text colour contrast issue

--- a/style.css
+++ b/style.css
@@ -781,7 +781,7 @@ h4 {
 }
 
 .tc-white {
-    color: #364577!important;
+    color: #f5f5f5 !important;
 }
 
 .btn-atomic-tangerine {
